2021-01-24  Jay Berkenbilt  <ejb@ql.org>

	* Implement remove for name and number trees as well as exposing
	remove and insertAfter methods for iterators. With this addition,
	qpdf now has robust read/write support for name and number trees.

2021-01-23  Jay Berkenbilt  <ejb@ql.org>

	* Add an insert method to QPDFNameTreeObjectHelper and
	QPDFNumberTreeObjectHelper.

	* QPDFNameTreeObjectHelper and QPDFNumberTreeObjectHelper will
	automatically repair broken name and number trees by default. This
	behavior can be turned off.

	* Change behavior of QPDFObjectHandle::newUnicodeString so that it
	encodes ASCII or PDFDocEncoding if those encodings will support
	all the characters in the string, resorting to UTF-16 only if the
	other encodings are insufficient. This is a cleaner implementation
	of the intention of encoding strings for use outside of contents
	and results in fewer instances of ASCII strings being needlessly
	encoded as UTF-16. This change may cause qpdf to generate
	different output from the same input when form field values are
	set using methods from QPDFFormFieldObjectHelper.

2021-01-16  Jay Berkenbilt  <ejb@ql.org>

	* Add new constructors for QPDFNameTreeObjectHelper and
	QPDFNumberTreeObjectHelper that take a QPDF object so they can
	create indirect objects and issue warnings. The old constructors
	are deprecated and will be removed in qpdf 11. Just pass in the
	owning QPDF of the object handle used to initialize the helpers.

	* Re-implement QPDFNameTreeObjectHelper and
	QPDFNumberTreeObjectHelper to be much more efficient and to have
	an iterator-based API in addition to the existing one. This makes
	it possible to use "range-for" loops over these helpers and to
	iterate through name and number trees without creating a map
	containing all the keys and values, which is slow and potentially
	consumes a lot of memory.

	* Add warn() to QPDF's public API.

2021-01-11  Jay Berkenbilt  <ejb@ql.org>
